js/js.translator/testData/incremental/invalidation/jsCodeWithConstString/lib1/js.1.kt
fun test() : dynamic {
    return js("var testObj = { $constKey: 1 }; testObj.$constKey")
}
